Added to the evaluation
This commit brings in the first part(s) of the evaluation. The
discussion on privacy is really difficult as I am still trying to find
out the facts about how the SAFE Network operates in this regard. It
will most likely need altered from its current stage.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,12 +1,24 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for David Andrew Brown at 2018-03-19 15:09:16 +0000 
+%% Created for David Andrew Brown at 2018-03-22 11:37:22 +0000 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@webpage{privacy,
+	Date-Added = {2018-03-22 11:37:08 +0000},
+	Date-Modified = {2018-03-22 11:37:21 +0000},
+	Lastchecked = {2018-03-22},
+	Url = {http://www.websters1913.com/words/Privacy}}
+
+@webpage{anonymous,
+	Date-Added = {2018-03-22 11:32:00 +0000},
+	Date-Modified = {2018-03-22 11:32:23 +0000},
+	Lastchecked = {2018-03-22},
+	Url = {http://www.websters1913.com/words/Anonymous}}
 
 @webpage{web-hosting-manager,
 	Date-Added = {2018-03-19 15:08:18 +0000},
@@ -14,7 +26,8 @@
 	Lastchecked = {2018-03-19},
 	Month = {01},
 	Url = {https://github.com/maidsafe/safe_examples/tree/master/web_hosting_manager},
-	Year = {2018}}
+	Year = {2018},
+	Bdsk-Url-1 = {https://github.com/maidsafe/safe_examples/tree/master/web_hosting_manager}}
 
 @webpage{example-apps,
 	Date-Added = {2018-03-19 15:07:57 +0000},
@@ -22,7 +35,8 @@
 	Lastchecked = {2018-03-19},
 	Month = {03},
 	Url = {https://github.com/maidsafe/safe_examples},
-	Year = {2018}}
+	Year = {2018},
+	Bdsk-Url-1 = {https://github.com/maidsafe/safe_examples}}
 
 @webpage{uri-scheme-ubuntu,
 	Date-Added = {2018-03-19 11:17:18 +0000},
@@ -216,41 +230,34 @@
 	Publisher = {BITTORRENT},
 	Title = {The BitTorrent protocol specification},
 	Year = {2008}}
-	
+
 @article{doi:10.1177/0165551506075327,
-author = {Peter Johan Lor and Johannes Jacobus Britz},
-title ={Is a knowledge society possible without freedom of access to information?},
-journal = {Journal of Information Science},
-volume = {33},
-number = {4},
-pages = {387-397},
-year = {2007},
-doi = {10.1177/0165551506075327},
-URL = {https://doi.org/10.1177/0165551506075327},
-eprint = {https://doi.org/10.1177/0165551506075327},
-abstract = { Modern information and communication technologies (ICTs) are seen not only as allowing global economic activities and the sharing of knowledge, but also as favouring transparency and democracy by creating space and a public sphere for civil society. The internet, and in particular the world wide web, have proved a powerful tool in both the manipulation of economic activities and the mobilization of civil society. Much is made of the democratizing effect of ICTs in e-government. Yet there are governments that attempt to control in an authoritarian manner both who accesses the internet and what content may be accessed and used. The question arises whether an information society and, more critically, a knowledge society can develop in the absence of freedom of access to information, freedom of expression and freedom to access the digital economy. Against this broad background the authors put forward four pillars of a knowledge society: (a) ICTs and connectivity, (b) content and the usability thereof, (c) infrastructure other than ICTs, and (d) human capacity. They attempt to evaluate the effect of authoritarian governmental control of access and content on each of them. It is argued from an ethical perspective, and more specifically from a perspective of social justice that, while a technologically oriented concept of the information society may not be incompatible with severe state control, a more multi-dimensional knowledge society cannot develop under such circumstances. Freedom is fundamental to participation in a knowledge society. Purely pragmatic arguments lead to the same conclusion. }}
+	Abstract = { Modern information and communication technologies (ICTs) are seen not only as allowing global economic activities and the sharing of knowledge, but also as favouring transparency and democracy by creating space and a public sphere for civil society. The internet, and in particular the world wide web, have proved a powerful tool in both the manipulation of economic activities and the mobilization of civil society. Much is made of the democratizing effect of ICTs in e-government. Yet there are governments that attempt to control in an authoritarian manner both who accesses the internet and what content may be accessed and used. The question arises whether an information society and, more critically, a knowledge society can develop in the absence of freedom of access to information, freedom of expression and freedom to access the digital economy. Against this broad background the authors put forward four pillars of a knowledge society: (a) ICTs and connectivity, (b) content and the usability thereof, (c) infrastructure other than ICTs, and (d) human capacity. They attempt to evaluate the effect of authoritarian governmental control of access and content on each of them. It is argued from an ethical perspective, and more specifically from a perspective of social justice that, while a technologically oriented concept of the information society may not be incompatible with severe state control, a more multi-dimensional knowledge society cannot develop under such circumstances. Freedom is fundamental to participation in a knowledge society. Purely pragmatic arguments lead to the same conclusion. },
+	Author = {Peter Johan Lor and Johannes Jacobus Britz},
+	Doi = {10.1177/0165551506075327},
+	Eprint = {https://doi.org/10.1177/0165551506075327},
+	Journal = {Journal of Information Science},
+	Number = {4},
+	Pages = {387-397},
+	Title = {Is a knowledge society possible without freedom of access to information?},
+	Url = {https://doi.org/10.1177/0165551506075327},
+	Volume = {33},
+	Year = {2007},
+	Bdsk-Url-1 = {https://doi.org/10.1177/0165551506075327}}
 
 @article{binde2005towards,
-  title={Towards knowledge societies: UNESCO world report},
-  author={Bind{\'e}, J{\'e}r{\^o}me},
-  year={2005},
-  publisher={UNESCO}
-}
+	Author = {Bind{\'e}, J{\'e}r{\^o}me},
+	Publisher = {UNESCO},
+	Title = {Towards knowledge societies: UNESCO world report},
+	Year = {2005}}
 
 @article{assembly1948universal,
-  title={Universal declaration of human rights},
-  author={Assembly, UN General},
-  journal={UN General Assembly},
-  year={1948}
-}
+	Author = {Assembly, UN General},
+	Journal = {UN General Assembly},
+	Title = {Universal declaration of human rights},
+	Year = {1948}}
 
 @article{irvine2010self,
-  title={Self Encrypting Data},
-  author={Irvine, David},
-  year={2010}
-}
-
-
-
-
-
+	Author = {Irvine, David},
+	Title = {Self Encrypting Data},
+	Year = {2010}}
