--- a/sections/05-evaluation.tex
+++ b/sections/05-evaluation.tex
@@ -7,3 +7,49 @@
 %A Netflix style of service very much fits the \textit{Fat Client} style of architecture. Video playback is already processed locally so the content delivery system is the key part of the system that changes. Considerations to how things like 'Suggestions' would work are the biggest challenges in my opinion. Currently, that kind of feature fits the client server model quite well. Netflix gathers information about the shows you watch then suggests similar content that you might like to view. As this happens server side it is a continually updating entity that can improve and adapt, the inner-workings completely hidden from the user. With a \textit{serverless architectural} model this approach is simply unfeasible, There is no \textit{processing} of information on the SAFE Network. This would mean that to perform actions like 'content suggestion' you would have to perform it locally, client side. This applies to any application that is built on the SAFE Network. Users are quite used to visiting a service, such as Netflix or Facebook, and seeing newly \textit{generated} content that was created whilst their client was off. To account for this, new approaches in how to generate content will have to be thought of. This might be as simple as generating/processing the content when the user first opens the client and then displaying it to them. A more complicated approach might be to encourage users to keep applications open in the background so this processing can take place. In the browser this makes sense, users are familiar with the concept of keeping 'browser tabs' open. Often 'bookmarking' or 'favouriting' their favourite sites. One could envision a system wherein these 'tabs' would be refreshed in the background so users don't notice any delay when opening up the application (website). Traditional 'desktop' applications don't have this same luxury. Users typically 'quit' applications when not in use, so they would either need to be kept alive in the background (which may annoy some) or rely on quickly generating/processing content on startup.
 
 \section{Privacy and Anonymity}
+
+Anonymity and Privacy are not mutually exclusive. Anonymity means \textit{``Nameless; of unknown name; also, of unknown or unavowed authorship''}\cite{anonymous}. True anonymity is very important for many people around the world, a good example being whistleblowers and the work of journalists in adversarial conditions. The identities of individuals is what matters here. Being able to convey a message and be ``nameless''. 
+
+Privacy means \textit{``The state of being in retirement from the company or observation of others; seclusion''}\cite{privacy}. Privacy is important aspect of our lives that some hold to a higher virtue than others. Most would agree however that you should be able to send a message/letter/email to someone and have the contents of that message be private.
+
+To relate the two concepts together in terms of the SAFE Network, I would say that anonymity relates to meta-data and privacy relates to data itself. A real world example of meta-data is something like an address. When you send a letter to someone, the postal service can see the address on the envelope. The letter is not anonymous because the recipient is not ``nameless''. The contents of the envelope, the data, is however private. It is \textit{``in retirement from the company or observation of others''}. The SAFE Network provides guarantees of privacy. Data on that is stored on the SAFE Network has gone through \textit{self encryption} meaning it is nearly impossible for anyone to deduce what that data is. I could upload pictures and documents with the assurance that only I can access them, it is private data. What the SAFE Network does not provide is anonymity in all network activity and that is down to meta-data. When a client requests a chunk of data from a vault, that vault knows the \textit{account} that is requesting the data. However difficult it may be to tie an \textit{account} to an individual, that information exists for a period of time and hence the request is no longer anonymous.
+
+This has big implications for the use case of the network but the nuances of how this impacts things is quite subtle. Data that is stored on the network is ``garbage data'', \textit{vaults} have no idea what the data they are storing means. \textit{Data Maps} are what gives meaning and relationship to chunks of data. At the storage level, chunks have absolutely no discernible relationship to each other apart form their proximity in 256-Bit address space. The access to \textit{Data Maps} is what gives users privacy. If you control access to it then the data it leads to is truly private. Once data is stored on the network, it could be said to be anonymous. Nothing publicly available exists to tie it to an individual. When the data is interacted with, true and complete anonymity is broken. \textit{Vaults} know exactly what account is requesting chunks of data.
+
+\subsection{Watching data}
+
+An interesting `attack' on the network could be through the use of purposefully planted data. When a piece of data is uploaded the client knows the \textit{Data Map} that corresponds to that data. Within this structure is contained the post encryption hashes of all the data chunks, meaning data can be fetched from the network and reassembled. An attack, however difficult, could be to create \textit{vaults} and hope one (at some point) belongs to a \textit{section} that stores one of the chunks. It is then possible to log all of the \textit{accounts} that access that data, meaning true anonymity is broken. You have identifiable information as to who accessed the data, although at this point not tied deducible to a real life identity. It is through laying a ``trap'' like this that anonymity of the user is not ensured.
+
+As the network matures more ``attack vectors'' such as this will become apparent. It is thus important that developers must be aware of the implications of using the SAFE Network for purposes of things like anonymous communications. The SAFE Network falls short of insuring true anonymity for interactions with the network.
+
+\section{Future Work}
+
+Future work for SAFE Wiki could take one of two approaches. Development could continue on SAFE Wiki itself or another approach could be taken, using the lessons learned from developing SAFE Wiki.
+
+\subsection{ZIM Uploader}
+
+The first step would be to create a new application called ``ZIM Uploader''. This applications only purpose would be to facilitate the management of ZIM files on the SAFE Network. This means that the average user that has no intention of uploading their own ZIM file doesn't need to see this piece of functionality. As this application only serves one purpose it would be far easier to maintain than SAFE Wiki itself.
+
+Indeed it is highly likely that other developers will create applications to facilitate NFS usage on the SAFE Network. As long as they allow users to create a ZIM Folder and place files within them using NFS emulation, then they could be used to manage ZIM files on the network. Remember there really isn't anything special about a ZIM Folder, it is just a MD structure that is emulated through NFS to store ZIM files. If this happens then the maintenance of a ``ZIM Uploader'' would no longer be required.
+
+\subsection{Kiwix JS Extension}
+\label{subsec:kiwix-js-safe}
+
+Kiwix JS itself is a browser extension. This means that after installation you have the ability to read ZIM files from local storage, Without needing an internet connection. Kiwix JS simply uses the browser as its run-time environment. Forking away from this approach perhaps fragments things more than they need to be. I propose that instead of pulling Kiwix JS into a desktop application, that through the use of the \textit{Web API} the functionality of SAFE Wiki could be brought to the extension.  With this approach the user would have Kiwix JS installed inside their browser (SAFE Browser or Peruse) and be able to use Kiwix JS as normal. Within a SAFE Network environment however, Kiwix JS would then have the ability to read ZIM files from the network.
+
+Extending Kiwix JS functionality instead of forking it brings many benefits. The first and foremost is that there is the possibility of this added functionality being merged into the main branch of Kiwix JS. Meaning it would be a supported solution provided by Kiwix. This would not only increase the awareness of ``SAFE Wiki'' but means that improvements (bug fixes etc) can be made to one single repository instead of constantly pulling changes across the two streams. As it would only have the functionality to read ZIM files, the changes required are minimal when compared to all the changes that happened inside SAFE Wiki. This approach makes sense, SAFE Wiki simply facilitates another storage medium for Kiwix JS to use.
+
+\subsection{Website}
+
+Through the \textit{Web API} it would be possible to build a website that would facilitate the reading of ZIM files. This means a user could simply visit the website through a SAFE Network compatible browser and then browse ZIM files hosted on the network as they wish. This approach would deliver the internals of Kiwix JS through the browser to run on the client, providing users with an extremely easy method to access the functionality of SAFE Wiki. This approach however does have its drawbacks. It would mean the maintenance of another code base meaning the benefits described in Section \ref{subsec:kiwix-js-safe} would not apply.
+
+\subsection{Suggestion}
+
+The big downside with choosing to build a website would be that users lose the ability to view ZIM files that they have stored locally. I can envision that in the future it would be possible for a user to download the ZIM files from the SAFE Network. Thus maintaining the ability to browse the files locally is a key piece of functionality that shouldn't be lost. This means that I suggest the approach outlined in Section \ref{subsec:kiwix-js-safe} is the most suitable. It is purely Kiwix JS, a well established project, with the added ability to read files from the SAFE Network.
+
+
+
+
+
+
+
