Work on conclusion and dissertation
This commit brings in changes to the existing content and also further
expands upon the evaluation of the dissertation.

--- a/sections/02-the-safe-network.tex
+++ b/sections/02-the-safe-network.tex
@@ -64,12 +64,13 @@ Web Assembly is an assembly-like language that you can compile C, C++, Rust, etc
 A \textit{Fat Client} is a computer (application) that can perform operations and tasks without relying on a central \textit{server}. A Fat Client may still need to make periodic connections to a server but the vast majority of its functionality can be performed without \textit{chatter} with the server. The concept of a Fat Client is juxtaposed to that of a Thin Client. A Thin Client is a lightweight computer/application that relies heavily on a server to have any sort of utility. It can perform some tasks locally but most are processed on the server before being sent to the client. Although not all Fat Clients follow the \textit{serverless architectural} model, applications that are designed to be \textit{serverless} are inherently Fat Clients. Hence because of the points mentioned previously, the SAFE Network encourages (almost requires) the Fat Client style of architecture to be used for software development. As Web Technologies mature they become more and more suitable for the development of fat clients. Instead of having to download desktop applications to your device, new technologies allow rich \textit{serverless fat client} applications to be built and delivered through the web. This prevents users from having to change the way they browse the internet. If delivering \textit{serverless fat client} applications through the web was not possible, users would be required to change to a model where they would have to download an app for Facebook, Twitter, YouTube etc. Hence I view the advent of new Web Technologies, such as Web Assembly, to be an enabler in the success of the SAFE Network.
 
 \section{Ownership of Data}
+\label{sec:ownership-of-data}
 
-Accessing the SAFE Network is \textit{permission-less}. What this means is that users don't need to go to a central body that controls the network to ask for (register) an account. A user simply connects to the network and is allowed to create one. All users of the network are equal, there is no concept of `admin' accounts. When a user uploads a piece of data to the network, it can either be `public' data or encrypted data. Note that all data stored by \textit{vaults} is encrypted, if the data is `public' then it means that the decryption key is publicly available so anyone can access the data. Vaults are still unable to determine the contents of the encrypted chunks they are storing.
+Accessing the SAFE Network is \textit{permission-less}. What this means is that users don't need to go to a central body that controls the network to ask for (register) an account. A user simply connects to the network and is allowed to create one. All users of the network are equal, there is no concept of ``admin'' accounts. When a user uploads a piece of data to the network, it can either be `public' data or encrypted data. Note that all data stored by \textit{vaults} is encrypted, if the data is ``public'' then it means that the decryption key is publicly available so anyone can access the data. \textit{Vaults} are still unable to determine the contents of the encrypted chunks they are storing.
 
-In decentralised data storage networks tying ownership to real-world identities is difficult. In many cases there is simply no means to facilitate this. Ownership of data is one feature that the SAFE network provides as apposed to a system like BitTorrent. In BitTorrent, its not possible to uniquely identify the owner of a piece of data. If a user starts sharing data they might be the theoretical `owner' but owing to the design of the protocol they have no ability to control the data. All users in a BitTorrent \textit{swarm} have equal rights to data. In the SAFE Network, the ownership of data is more clearly defined. When data is uploaded it is split up into chunks and distributed across different vaults. Owing to the design of the SAFE Network that data has an identifiable owner, the account that originally uploaded it to the network. They can do with it what they wish, including deleting the data permanently. This contrasts with BitTorrent greatly wherein data cannot simply be deleted. To delete data in the BitTorrent network you would have to explicitly ask all nodes to delete the file, they have no obligation to do so.
+Ownership of data is one feature that the SAFE network provides as apposed to a system like BitTorrent. If a user starts sharing data they might be the theoretical `owner' but owing to the design of the protocol they have no ability to control the data. All users in a BitTorrent \textit{swarm} have equal rights to data. In the SAFE Network, the ownership of data is more clearly defined. When data is uploaded it is split up into chunks and distributed across different \textit{vaults}. That data has an identifiable ``owner'', the account that originally uploaded it to the network and has the relevant decryption keys. This contrasts with BitTorrent greatly wherein nobody has special ``privileges'' to data when compared to other users.
 
-Data that has been written to the SAFE Network is \textit{immutable} without the credentials of the account that uploaded it. This is beneficial to users as it means they have the assurance that they own and control their own data, nobody else can edit or tamper with it. This does however incur issues surrounding the distribution of illicit and copyrighted content. A scenario I can envision is users treating accounts as `disposable'. One could imagine someone uploading the latest Hollywood blockbuster and then erasing the account credentials used to upload that file. Once lost, it is impossible to delete the data from the network. A solution to this could be through the use of a \textit{master-key} to the network. This would be a decryption key that would allow complete access to all data on the network. Such a key would be beneficial in removing illicit content but completely invalidates the principles of the SAFE Network. This issue of control has made a huge impact upon BitTorrent, numerous court cases and law suits have been issued since its inception down to its use for illicit content sharing. This is a situation of "you can't have your cake and eat it too". It is impossible to ensure complete security of user data and then undermine that with the ability of a central body to tamper with it. At the end of the day the SAFE Network is a tool. Like any other tool (BitTorrent) users will do with it what they please. The mitigation against illegal use of the tool should not impact on those who follow the law.
+In the SAFE Network users ``own'' and control their own data, nobody else can edit or tamper with it. This does however incur issues surrounding the distribution of illicit and copyrighted content. A scenario I can envision is users treating accounts as `disposable'. One could imagine someone uploading the latest Hollywood blockbuster and then erasing the account credentials used to upload that file. Once lost, it is impossible to delete the data from the network. A solution to this could be through the use of a \textit{master-key} to the network. This would be a decryption key that would allow complete access to all data on the network. Such a key would be beneficial in removing illicit content but completely invalidates the principles of the SAFE Network. This issue of control has made a huge impact upon BitTorrent, numerous court cases and law suits have been issued since its inception down to its use for illicit content sharing. This is a situation of "you can't have your cake and eat it too". It is impossible to ensure complete security of user data and then undermine that with the ability of a central body to tamper with it. At the end of the day the SAFE Network is a tool. Like any other tool (BitTorrent) users will do with it what they please. The mitigation against illegal use of the tool should not impact on those who follow the law.
 
 \section{Alternative Business Models}
 
