--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,24 +1,42 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for David Andrew Brown at 2018-03-22 11:37:22 +0000 
+%% Created for David Andrew Brown at 2018-03-22 17:22:47 +0000 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
+@webpage{tiananmen-square,
+	Author = {Jonathan Kaiman },
+	Date-Added = {2018-03-22 17:20:50 +0000},
+	Date-Modified = {2018-03-22 17:22:46 +0000},
+	Month = {2013},
+	Title = {Tiananmen Square online searches censored by Chinese authorities},
+	Url = {https://www.theguardian.com/world/2013/jun/04/tiananmen-square-online-search-censored},
+	Urldate = {2018-03-18},
+	Year = {6}}
+
+@webpage{delete-data-rfc,
+	Date-Added = {2018-03-22 17:00:36 +0000},
+	Date-Modified = {2018-03-22 17:02:59 +0000},
+	Lastchecked = {2018-03-22},
+	Url = {https://github.com/ustulation/rfcs/blob/deletable-immutable-data/text/0000-deletable-immutable-data/0000-deletable-immutable-data.md}}
+
 @webpage{privacy,
 	Date-Added = {2018-03-22 11:37:08 +0000},
 	Date-Modified = {2018-03-22 11:37:21 +0000},
 	Lastchecked = {2018-03-22},
-	Url = {http://www.websters1913.com/words/Privacy}}
+	Url = {http://www.websters1913.com/words/Privacy},
+	Bdsk-Url-1 = {http://www.websters1913.com/words/Privacy}}
 
 @webpage{anonymous,
 	Date-Added = {2018-03-22 11:32:00 +0000},
 	Date-Modified = {2018-03-22 11:32:23 +0000},
 	Lastchecked = {2018-03-22},
-	Url = {http://www.websters1913.com/words/Anonymous}}
+	Url = {http://www.websters1913.com/words/Anonymous},
+	Bdsk-Url-1 = {http://www.websters1913.com/words/Anonymous}}
 
 @webpage{web-hosting-manager,
 	Date-Added = {2018-03-19 15:08:18 +0000},
