--- a/sections/05-evaluation.tex
+++ b/sections/05-evaluation.tex
@@ -1,10 +1,22 @@
 \chapter{Evaluation}
 
-%\subsection{An Example, Netflix on the SAFE Network}
-%
-%Unlike BitTorrent, the SAFE Network could indeed be used to facilitate a service like Netflix. At its core, Netflix is about data. Their main goal being streaming the data that they have (video) to as many users around the world as possible and to do it as fast as possible. Although they would be able to benefit from redundancy and reduced server costs, there are flaws in the BitTorrent protocol that make it extremely difficult to justify it as a means of facilitating a website like Netflix. The biggest issue being ownership of data. As discussed previously, websites like Netflix have to have 'ownership of data'. They have to be able to control and \textit{mutate} the access of individuals to content. They simply cannot do this on BitTorrent. Another glaring whole in that approach is that of the health of the swarm. For content (data) to be available, nodes have to be online and sharing that file. This could mean that popular content would be readily \textit{seeded} but more obscure content may not be. The extreme of this being that the most obscure content might only be \textit{seeded} by Netflix themselves, resulting in a return to the Client-Server model they currently have. The SAFE Network solves these issues. Ownership of data is clearly defined, you own your data and nobody else does. Architecturally the SAFE Network insures that there are multiple copies of data spread around the network, meaning files will always be redundantly stored across the network. 
-%
-%A Netflix style of service very much fits the \textit{Fat Client} style of architecture. Video playback is already processed locally so the content delivery system is the key part of the system that changes. Considerations to how things like 'Suggestions' would work are the biggest challenges in my opinion. Currently, that kind of feature fits the client server model quite well. Netflix gathers information about the shows you watch then suggests similar content that you might like to view. As this happens server side it is a continually updating entity that can improve and adapt, the inner-workings completely hidden from the user. With a \textit{serverless architectural} model this approach is simply unfeasible, There is no \textit{processing} of information on the SAFE Network. This would mean that to perform actions like 'content suggestion' you would have to perform it locally, client side. This applies to any application that is built on the SAFE Network. Users are quite used to visiting a service, such as Netflix or Facebook, and seeing newly \textit{generated} content that was created whilst their client was off. To account for this, new approaches in how to generate content will have to be thought of. This might be as simple as generating/processing the content when the user first opens the client and then displaying it to them. A more complicated approach might be to encourage users to keep applications open in the background so this processing can take place. In the browser this makes sense, users are familiar with the concept of keeping 'browser tabs' open. Often 'bookmarking' or 'favouriting' their favourite sites. One could envision a system wherein these 'tabs' would be refreshed in the background so users don't notice any delay when opening up the application (website). Traditional 'desktop' applications don't have this same luxury. Users typically 'quit' applications when not in use, so they would either need to be kept alive in the background (which may annoy some) or rely on quickly generating/processing content on startup.
+\section{Ownership of Data}
+
+As discussed in Section \ref{sec:ownership-of-data}, Ownership of Data is an important aspect of the SAFE Network. Access to the \textit{Data Map} of data is what grants access to what is being stored on the network, revoke access or ``forget'' the credentials to the \textit{Data Map} and that data is irrecoverable. Users `own' the access to their data and nobody else does. This is what is so special about the architecture of the SAFE Network and what gives it unique opportunities for software development. Ownership of Data specifically means that you can give people access to data whilst retaining the sole right to its mutation. Think of a public blog for example. The creator, the account used to create the blog, `owns' the ability to edit the blog. They can mutate data as they please as they have access to the keys necessary. Other people can access the data if and only if the `owner' of the blog says they can. Thus being able to host websites on the SAFE Network like this is extremely powerful.
+
+\section{Opportunistic Caching}
+
+ An important feature of \textit{vaults} that hasn't been discussed yet is that of \textit{caching}. In short, if \textit{vaults} keep passing the same chunk of data onto other \textit{vaults} (as a client somewhere retrieves it) they start to cache the chunks. This means in a loose sense that as more and more people start to access data, say a news website, that access gets faster and faster. Through the architecture of the SAFE Network such websites cannot 'go down' due to high traffic, the network simply responds by allowing more \textit{vaults} to cache and serve the data. This property is important to small websites. If a smaller news site suddenly gets high amounts of traffic, for instance a viral article, they might suffer from outages due to high traffic on a central server in the traditional model of the internet. Hosted on the SAFE Network however, the network will respond (autonomously) to the higher volume of traffic and dynamically increase its potential to serve that content.
+ 
+ Another benefit of this caching is geographical proximity. A good example is that of a website that has support for multiple languages. Due to \textit{vaults} caching data, the chunks that correspond to particular languages will be cached in the \textit{vaults} nearest where they are being served. For instance, the chunks that correspond to Japanese content would more likely to be cached near \textit{vaults} in and around Japan as that is where they are being read from the most. Unlike traditional models of client-server, \textit{vaults} caching data means that as more clients access content it gets faster and faster to retrieve that data.
+ 
+ This caching applies to all data, including ZIM files. This means that when something like Wikipedia is uploaded to the network, the more people that access it the faster it gets for everyone. For a popular resource like Wikipedia this can be really important in some areas of the world. For places that have slow internet connections, \textit{vaults} that are close by can help to ensure data can be retrieved by clients as quickly as possible. 
+ 
+ \section{Cost Benefit}
+ 
+ A huge benefit to anyone wanting to build a website or application is how much it costs to store data on the SAFE Network. Traditionally on the internet, you would need to pay for a server and also a domain name to be used. Depending on how much traffic the website gets you would need a more powerful server which costs more money. This is not the case on the SAFE Network. The only cost is in writing data to the network, thats it. Meaning if you wanted to publish a website you would use \textit{Safecoin} to pay for the storage needed, after that however your website is available forever. You don't need to pay anymore money except when you want to update or add new content.
+ 
+ For SAFE Wiki, this means that once a user pays to upload something like Wikipedia (``only'' ~75GB in size) it is then available to everyone for free and forever. It doesn't cost anymore money than it cost to store the file originally. This means that it is possible for not only organisations like Wikimedia to upload files, but also good samaritans using the network. As the ZIM file is stored on the network as immutable data it cannot be deleted or altered. Meaning once uploaded that file is available for consumption by all and forever.
 
 \section{Privacy and Anonymity}
 
@@ -14,13 +26,19 @@ Privacy means \textit{``The state of being in retirement from the company or obs
 
 To relate the two concepts together in terms of the SAFE Network, I would say that anonymity relates to meta-data and privacy relates to data itself. A real world example of meta-data is something like an address. When you send a letter to someone, the postal service can see the address on the envelope. The letter is not anonymous because the recipient is not ``nameless''. The contents of the envelope, the data, is however private. It is \textit{``in retirement from the company or observation of others''}. The SAFE Network provides guarantees of privacy. Data on that is stored on the SAFE Network has gone through \textit{self encryption} meaning it is nearly impossible for anyone to deduce what that data is. I could upload pictures and documents with the assurance that only I can access them, it is private data. What the SAFE Network does not provide is anonymity in all network activity and that is down to meta-data. When a client requests a chunk of data from a vault, that vault knows the \textit{account} that is requesting the data. However difficult it may be to tie an \textit{account} to an individual, that information exists for a period of time and hence the request is no longer anonymous.
 
-This has big implications for the use case of the network but the nuances of how this impacts things is quite subtle. Data that is stored on the network is ``garbage data'', \textit{vaults} have no idea what the data they are storing means. \textit{Data Maps} are what gives meaning and relationship to chunks of data. At the storage level, chunks have absolutely no discernible relationship to each other apart form their proximity in 256-Bit address space. The access to \textit{Data Maps} is what gives users privacy. If you control access to it then the data it leads to is truly private. Once data is stored on the network, it could be said to be anonymous. Nothing publicly available exists to tie it to an individual. When the data is interacted with, true and complete anonymity is broken. \textit{Vaults} know exactly what account is requesting chunks of data.
+This has big implications for the use case of the network but the nuances of how this impacts things is quite subtle. Data that is stored on the network is ``garbage data'', \textit{vaults} have no idea what the data they are storing means. \textit{Data Maps} are what gives meaning and relationship to chunks of data. At the storage level, chunks have absolutely no discernible relationship to each other apart form their proximity in 256-Bit address space. The access to \textit{Data Maps} is what gives users privacy. If you are the only person who knows where it is and how to decrypt it then the data it leads to is truly private. Once data is stored on the network, it could be said to be anonymous. Nothing publicly available exists to tie it to an individual. When the data is interacted with, true and complete anonymity is broken. \textit{Vaults} know exactly what account is requesting chunks of data. It is thus for the above reasons I propose that the SAFE Network allows pseudo-anonymised interactions. In practically users can be relatively assured that their interaction is anonymous, they must however know that it is non ensured.
 
-\subsection{Watching data}
+Privacy and anonymity is very important for SAFE Wiki. In some parts of the world people do not have the freedom to access any information they want. A modern day example of this is the censorship is that the Chinese government are still censoring access to information about Tiananmen Square\cite{tiananmen-square}. Thus the privacy and pseudonymization of activity is very important. The SAFE Network facilitates the uncensored access to information, which as discussed at the beginning of this report is crucial to developing societies.
 
-An interesting `attack' on the network could be through the use of purposefully planted data. When a piece of data is uploaded the client knows the \textit{Data Map} that corresponds to that data. Within this structure is contained the post encryption hashes of all the data chunks, meaning data can be fetched from the network and reassembled. An attack, however difficult, could be to create \textit{vaults} and hope one (at some point) belongs to a \textit{section} that stores one of the chunks. It is then possible to log all of the \textit{accounts} that access that data, meaning true anonymity is broken. You have identifiable information as to who accessed the data, although at this point not tied deducible to a real life identity. It is through laying a ``trap'' like this that anonymity of the user is not ensured.
+\section{Immutability of Data}
 
-As the network matures more ``attack vectors'' such as this will become apparent. It is thus important that developers must be aware of the implications of using the SAFE Network for purposes of things like anonymous communications. The SAFE Network falls short of insuring true anonymity for interactions with the network.
+As mentioned in Section \ref{subsec:immutability-of-data}, data on the SAFE Network is immutable. Once a chunk is written to the network that chunk of data can never be removed. It is the access to data through \textit{Data Maps} and encryption keys that orchestrates the usage of it. What this means in practical situations is that once someone has access to data, they have access to it forever. There is no way to revoke that right. For SAFE Wiki, this is brilliant. Once a ZIM file is uploaded then a user can access that information forever.
+
+What is troubling however is sometimes a user may indeed wish to delete data permanently. To truly have it be gone forever and not stored by the network. This may be on a personal level or asking a company to delete their personal records. Although not implemented yet, there is talk and an RFC\cite{delete-data-rfc} to bring deletable Immutable Data to the network. However to allow ``Immutable Data'' to be deleted is an interesting concept, I don't know if you could really call it ``Immutable'' if you can indeed delete it.
+
+\section{SAFE Wiki}
+
+What I set out to achieve with SAFE Wiki has been achieved. In its ``final'' state, users can upload ZIM files to the SAFE Network and browse them. I personally feel that the idea behind SAFE Wiki is an extremely viable use case of the SAFE Network. Hosting archives of websites when the user-base does not exist to support them makes sense.
 
 \section{Future Work}
 
@@ -45,7 +63,7 @@ Through the \textit{Web API} it would be possible to build a website that would 
 
 \subsection{Suggestion}
 
-The big downside with choosing to build a website would be that users lose the ability to view ZIM files that they have stored locally. I can envision that in the future it would be possible for a user to download the ZIM files from the SAFE Network. Thus maintaining the ability to browse the files locally is a key piece of functionality that shouldn't be lost. This means that I suggest the approach outlined in Section \ref{subsec:kiwix-js-safe} is the most suitable. It is purely Kiwix JS, a well established project, with the added ability to read files from the SAFE Network.
+The big downside with choosing to build a website would be that users lose the ability to view ZIM files that they have stored locally. I can envision that in the future it would be possible for a user to download ZIM files from the SAFE Network. Thus maintaining the ability to browse the files locally is a key piece of functionality that shouldn't be lost. This means that I suggest the approach outlined in Section \ref{subsec:kiwix-js-safe} is the most suitable. It is purely Kiwix JS, a well established project, with the added ability to read files from the SAFE Network.
 
 
 
